# ai-workflow-engine

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  dependencies.py
app/core/: __init__.py  enums.py  models.py
app/db/: __init__.py  models.py  session.py
app/effects/: __init__.py  base.py  simulated.py
app/evaluation/: __init__.py  harness.py  models.py
app/llm/: __init__.py  base.py  cli_adapter.py  mock_adapter.py
app/observability/: __init__.py  llm_traces.py
app/retrieval/: __init__.py  base.py  chunking.py  context_builder.py  mock_retriever.py  models.py  traces.py
app/templates/: base.html  error.html  intake.html  replay_result.html  run_detail.html
app/web/: __init__.py  routes.py
app/workflows/: __init__.py  contract.py  registry.py
data/prior_auth/: abbreviation_heavy.txt  emergent_cardiac.txt  knee_replacement.txt  missing_justification.txt  routine_imaging.txt
docs/: architecture.md  demo-script.md  prior-auth-plan.md
docs/playbooks/: invoice_exception_playbook.md
docs/policies/: ap_approval_policy.md  invoice_overage_policy.md  vendor_surcharge_policy.md
docs/vendors/: acme_contract_summary.md
evals/cases/: access_request.json  invoice_exception.json  invoice_intake.json  prior_auth.json
scripts/: call-claude.py  export_bundle.py  run_evals.py
tests/: conftest.py
tests/golden/: test_golden_policy.py
tests/integration/: test_api_integration.py  test_bundle_integration.py  test_db_schema.py  test_dod_audit.py  test_invoice_api.py  test_invoice_exception_api.py  (+3 more)
(+124 files in other folders)
